Update NASA DATA mat to csv.ipynb
변수로 바꿈

--- a/NASA DATA mat to csv.ipynb
+++ b/NASA DATA mat to csv.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val = data_set.get('B0005')"
+    "val = data_set.get(battery)"
    ]
   },
   {
